*Empty MediaWiki Message*

--- a/Gül'mamedov_Dašgin.mw
+++ b/Gül'mamedov_Dašgin.mw
@@ -1,5 +1,5 @@
 {{delete|tegii ei teda kel't; spamlehtpol'}}
 [[Fail:Dashgyn Gulmammadov.jpg|thumb|right|280px|Dashgin Gülmămedov]]
-'''Dashgin Gülmămed oglu Gülmămedov''' - (12.09.1977 Kachagan, Marneuli, Gruzia) Shat Turok Karapapak (Prinche Karapapaks), politik. Pisatel.
+'''Dashgin Gülmămed oglu Gülmămedov''' - ({{lang-tr| Taşkın Gülmemmedov}}, {{lang-ru|Дашгын Гюльмамед-оглы Гюльмамедов}}, 12.09.1977 Kachagan, Marneuli, Gruzia) Shat Turok Karapapak (Prinche Karapapaks), politik. Pisatel.
 {{stub}}
 [[Kategorii:Valdkundmehed]]
