--- a/Mec.mw
+++ b/Mec.mw
@@ -1,5 +1,5 @@
-[[Fail:Archangelsk taiga.JPG|pisi|oiged|200px|Tal'vmec (Pineg-jogen taho, [[Arhangel'skan agj]])]]
-'''Mec''' om [[Ma]]šurun pindan pala, kattud [[Pukazmused|pukazmusil]]. Mec ottab läz 9,4 procentad Man pindad da läz koumandest kuivman pindad, nece om 38 mln km²<ref>http://www.fao.org/docrep/017/i3110e/i3110e.pdf</ref>. Necen meczonan polišk mülüihe [[Tropikad|tropikoihe]], nelländez om [[Pohjoižmapolišk]]os. [[ÜRK]]:n arvoimižen mödhe, [[Venäma]]n mecan pind om 8,5 mln km² (851 mln gektarad)<ref>[http://www.fao.org/forestry/country/57478/en/rus/ Venäman Federacijan mecad da mecižanduz]</ref>, Rosleshozan andmusiden mödhe, miččid lugetas toižel metodal, vodel 2011 augotišes, mecfond om 1183,3 mln. gektarad, 797,1 — kattud mecal<ref>http://www.rosleshoz.gov.ru/docs/other/77/1.pdf</ref>.
+[[Fail:Archangelsk taiga.JPG|pisi|oiged|200px|Tal'vmec (taho läz Pineg-joged, [[Arhangel'skan agj]])]]
+'''Mec''' om [[Ma]]šurun pindan pala, kattud [[Pukazmused|pukazmusil]]. Mec ottab läz 9,4 procentad Man pindad da läz koumandest kuivman pindad, nece om 38 mln km²<ref>http://www.fao.org/docrep/017/i3110e/i3110e.pdf</ref>. Necen meczonan polišk mülüihe [[Tropikad|tropikoihe]], nelländez om [[Pohjoižmapolišk]]os. [[ÜRK]]:n arvoimižen mödhe, [[Venäma]]n mecan pind om 8,5 mln km² (851 mln gektarad)<ref>[http://www.fao.org/forestry/country/57478/en/rus/ Venäman Federacijan mecad da mecižanduz]</ref>, Rosleshoz:an andmusiden mödhe, miččid lugetas toižel metodal, vodel 2011 augotišes, mecfond om 1183,3 mln. gektarad, 797,1 — kattud mecal<ref>http://www.rosleshoz.gov.ru/docs/other/77/1.pdf</ref>.
 
 == Mecoiden tipiden vepsän nimed ==
 * ''Barbik, barbišt'' — hen lehtezmec.
@@ -10,6 +10,7 @@
 * ''Puregišt'' — paks nor' mec.
 * ''Rädeg'' — paks da amuine kuz'ne mec.
 * ''Reskač, norišt'' — nor' mec.
+* ''Rozjam'' — kuivanu jurele mec.
 * ''Šaim'' — mectunu henošti [[so]].
 * ''Vičikišt'' — nor' paks mec; paks penzhišt.
 * ''Vidä'' — nor’ kuz’ne mec, mž. paks.
