*Empty MediaWiki Message*

--- a/Haapsalu.mw
+++ b/Haapsalu.mw
@@ -1,4 +1,4 @@
-[[Fail:Haapsalu vanalinn.jpg|thumb|Haapsalu]]
+[[Fail:Haapsalu panorama2.jpg|thumb|Haapsalu]]
 '''Haapsalu''' ([[estin kel'|estin kelel]]: ''Haapsalu'') om lidn [[Estinma]]s.
 
 Pind om 10,6 km². Eläjiden lugu om 11 618 ristituid (2010).
