долгой гласной нет

--- a/Mail'man_valdkundad.mw
+++ b/Mail'man_valdkundad.mw
@@ -245,7 +245,7 @@
 |-
 | <CENTER>'''120'''</CENTER> || <CENTER>[[Fail:Flag_of_Monaco.svg|100px]]</CENTER> || <CENTER>[[Monak]]</CENTER> || <CENTER>[[Monak]]</CENTER>
 |-
-| <CENTER>'''121'''</CENTER> || <CENTER>[[Fail:Flag_of_Mongolia.svg|100px]]</CENTER> || <CENTER>[[Mongolii]]</CENTER> || <CENTER>[[Ulanbaatar]]</CENTER>
+| <CENTER>'''121'''</CENTER> || <CENTER>[[Fail:Flag_of_Mongolia.svg|100px]]</CENTER> || <CENTER>[[Mongolii]]</CENTER> || <CENTER>[[Ulanbatar]]</CENTER>
 |-
 | <CENTER>'''122'''</CENTER> || <CENTER>[[Fail:Flag_of_Mozambique.svg|100px]]</CENTER> || <CENTER>[[Mozambik]]</CENTER> || <CENTER>[[Maputu]]</CENTER>
 |-
