*Empty MediaWiki Message*

--- a/Karjalan_Tazovaldkundan_lidnad.mw
+++ b/Karjalan_Tazovaldkundan_lidnad.mw
@@ -1,13 +1,13 @@
 '''[[Karjalan Tazovaldkund]]as''' oma [[13 (lugu)|koumetoštkümne]] lidnad:
 
 * [[Petroskoi]] (tazovaldkundan pälidn)
+* [[Anus (lidn)|Anus-lidn]]
 * [[Belomorsk]]
 * [[Kem']]
 * [[Kondopog]]
 * [[Kostamukš]]
 * [[Lahdenpohj]]
 * [[Medvežjegorsk]]
-* [[Olonec]]
 * [[Pit'krand]]
 * [[Pudož]]
 * [[Segež]]
