*Empty MediaWiki Message*

--- a/Anusan_rahvahaline_rajon.mw
+++ b/Anusan_rahvahaline_rajon.mw
@@ -1,6 +1,5 @@
 {{Rajon
-| Nimi= Olonecan rahvahaline rajon
-<br />('''Olonecan rahvahaline rajon''')
+| Nimi= Anusan rahvahaline rajon
 <br />[[Venäkel'|ven.]]: '''Олонецкий район''
 
 | Znam#= 
@@ -8,7 +7,7 @@
 | Znam text     =
 | Flag text     =
 | Valdkund      = Venäma
-| Pälidn        = Olonec
+| Pälidn        = Anus (lidn){{*}}Anus
 | Eläjiden lugu = 24 962
 | Year= 2010
 | Pind= 3988
@@ -16,15 +15,15 @@
 | Map width     = 
 }}
 
-'''Olonecan rahvahaline rajon''' ([[Venäkel'|venäkelel]]: ''Олонецкий район'') om municipaline palakund [[Karjalan Tazovaldkund]]as, [[Venäma|Venäläižes Federacijas]].
+'''Anusan rahvahaline rajon''' ([[Venäkel'|venäkelel]]: ''Олонецкий район'') om municipaline palakund [[Karjalan Tazovaldkund]]as, [[Venäma|Venäläižes Federacijas]].
 
 == Istorii ==
 
 == Administrativiž-territorialine jagand ==
 
 == Irdkosketused ==
-* [http://www.olon-rayon.ru/ Olonecan rahvahaližen rajonan oficialine sait] (venäkelel)
+* [http://www.olon-rayon.ru/ Anusan rahvahaližen rajonan oficialine sait] (venäkelel)
 * [http://gov.karelia.ru/gov/Regions/olonets_info.html Olonecan rahvahaline rajon. Karjalan Tazovaldkundan oficialine sait] (venäkelel)
 
 {{stub}}
-[[Kategorii:Karjalan Tazovaldkund|O]]
+[[Kategorii:Karjalan Tazovaldkund]]
