--- a/Anusan_rahvahaline_rajon.mw
+++ b/Anusan_rahvahaline_rajon.mw
@@ -7,7 +7,7 @@
 | Znam text     =
 | Flag text     =
 | Valdkund      = Venäma
-| Pälidn        = Anus (lidn){{!}}Anus
+| Pälidn        = Anus (lidn)
 | Eläjiden lugu = 24 962
 | Year= 2010
 | Pind= 3988
