*Empty MediaWiki Message*

--- a/Anusan_rahvahaline_rajon.mw
+++ b/Anusan_rahvahaline_rajon.mw
@@ -23,7 +23,7 @@
 
 == Irdkosketused ==
 * [http://www.olon-rayon.ru/ Anusan rahvahaližen rajonan oficialine sait] (venäkelel)
-* [http://gov.karelia.ru/gov/Regions/olonets_info.html Olonecan rahvahaline rajon. Karjalan Tazovaldkundan oficialine sait] (venäkelel)
+* [http://gov.karelia.ru/gov/Regions/olonets_info.html Anusan rahvahaline rajon. Karjalan Tazovaldkundan oficialine sait] (venäkelel)
 
 {{stub}}
 [[Kategorii:Karjalan Tazovaldkund]]
