*Empty MediaWiki Message*

--- a/Anus_(lidn).mw
+++ b/Anus_(lidn).mw
@@ -1,4 +1,4 @@
-'''Olonec''' ([[Venäkel'|ven.]] ''Олонец'', [[Karjalan kel'|kar.]] ''Anuksenlinnu'', [[Suomen kel'|suom.]] ''Aunus'') om lidn [[Venäma]]s, [[Karjalan Tazovaldkund]]as.
+'''Anus''' ([[Venäkel'|ven.]] ''Олонец'', [[Karjalan kel'|kar.]] ''Anuksenlinnu'', [[Suomen kel'|suom.]] ''Aunus'') om lidn [[Venäma]]s, [[Karjalan Tazovaldkund]]as.
 {{stub}}
 
 [[Kategorii:Venäman lidnad]]
