*Empty MediaWiki Message*

--- a/Anusan_rahvahaline_rajon.mw
+++ b/Anusan_rahvahaline_rajon.mw
@@ -1,7 +1,6 @@
 {{Rajon
 | Nimi= Anusan rahvahaline rajon
 <br />[[Venäkel'|ven.]]: '''Олонецкий район''
-
 | Znam#= 
 | Flag= Coat of Arms of Olonets (Karelia) (1781).png
 | Znam text     =
@@ -15,7 +14,7 @@
 | Map width     = 
 }}
 
-'''Anusan rahvahaline rajon''' ([[Venäkel'|venäkelel]]: ''Олонецкий район'') om municipaline palakund [[Karjalan Tazovaldkund]]as, [[Venäma|Venäläižes Federacijas]].
+'''Anusan (Olonecan) rahvahaline rajon''' ([[Venäkel'|venäkelel]]: ''Олонецкий район'') om municipaline palakund [[Karjalan Tazovaldkund]]as, [[Venäma|Venäläižes Federacijas]].
 
 == Istorii ==
 
