--- a/Evrovizijan_vägestajad.mw
+++ b/Evrovizijan_vägestajad.mw
@@ -300,7 +300,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | 15
 | [[Saksanma]]
 | 19. sulaku
-| [[Fail:Flag of the Netherlands.svg|border|20px]] [[Gaag]]
+| [[Fail:Flag of the Netherlands.svg|border|20px]] [[Hag]]
 |-
 ! scope="row" | [[Evrovizii-1981|1981]]
 | [[Fail:Flag of the United Kingdom.svg|border|20px]] [[Sur' Britanii]]
@@ -316,7 +316,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 ! scope="row" | [[Evrovizii-1982|1982]]
 | [[Fail:Flag of Germany.svg|border|20px]] [[Saksanma]]
 | «[[Ein bißchen Frieden]]»
-| [[Nicole (German singer)|Nicole]]
+| [[Nikol' (pajatai, Saksanma)|Nikol']]
 | ''Ralph Siegel'', ''Bernd Meinunger''
 | 161
 | 61
