*Empty MediaWiki Message*

--- a/Rütte_Mark.mw
+++ b/Rütte_Mark.mw
@@ -1,5 +1,5 @@
 [[Fail:Mark Rutte-6.jpg|thumb|right|250px|Mark Rütte]]
-'''Mark Rütte''' ([[alaman kel'|alam.]]: ''Mark Rutte''; sünd. [[14. uhoku]] [[1967]], [[Gaag]], [[Alamad]]) om nügüdläine [[Alamad|Alamaiden]] päministr.
+'''Mark Rütte''' ([[alaman kel'|alam.]]: ''Mark Rutte''; sünd. [[14. uhoku]] [[1967]], [[Hag]], [[Alamad]]) om nügüdläine [[Alamad|Alamaiden]] päministr.
 {{stub}}
 
 [[Kategorii:Alamad]]
