*Empty MediaWiki Message*

--- a/Jonkblut_Villem_Jozef_Andreas.mw
+++ b/Jonkblut_Villem_Jozef_Andreas.mw
@@ -1,5 +1,5 @@
 [[Fail:WJonckbloet.jpg|thumb|right|250px|Villem Jozef Andreas Jonkblut]]
-'''Villem Jozef Andreas Jonkblut''' ([[alaman kel'|alam.]]: ''Willem Jozef Andries Jonckbloet''; sünd. [[6. heinku]] [[1817]], [[Gaag]], [[Alamad]] — kol. [[19. reduku]] [[1885]], [[Visbaden]], [[Saksanma]]) oli alamalaine [[literatur]]an istorik.
+'''Villem Jozef Andreas Jonkblut''' ([[alaman kel'|alam.]]: ''Willem Jozef Andries Jonckbloet''; sünd. [[6. heinku]] [[1817]], [[Hag]], [[Alamad]] — kol. [[19. reduku]] [[1885]], [[Visbaden]], [[Saksanma]]) oli alamalaine [[literatur]]an istorik.
 
 == Radod ==
 * ''Geschiedenis der middennederlandsche dichtkunst.'' (1851/55)
