--- a/Jogensu.mw
+++ b/Jogensu.mw
@@ -1,1 +1,5 @@
-#suuna [[Ustii]]
+'''Jogensu''':
+* '''[[Jogensu (lidn)]]''' — lidn [[Suomenma]]s
+* [[Ustii]]-külän toine nimi
+* eziauguine tärtuz — '''[[su (jogi)]]'''
+{{t}}
