--- a/Suomenma.mw
+++ b/Suomenma.mw
@@ -60,10 +60,10 @@ Suomenman oficialižed keled oma [[suomen kel'|suomen]] da [[ročin kel'|ročin]
 | align=center | 1 550 362
 |- 
 | [[Fail:Pirkanmaa.vaakuna.svg|20px]] '''[[Pirkanma]]'''
-| [[Tampere]]
+| [[Tampereh]]
 | align=center | 491 743
 |- 
-| [[Fail:Varsinais-Suomen.vaakuna.svg|20px]] '''[[Varsinais-Suomi]]'''
+| [[Fail:Varsinais-Suomen.vaakuna.svg|20px]] '''[[Ehtboksuomenma]]'''
 | [[Turku]]
 | align=center | 467 245
 |- 
@@ -92,7 +92,7 @@ Suomenman oficialižed keled oma [[suomen kel'|suomen]] da [[ročin kel'|ročin]
 | align=center | 193 735
 |- 
 | [[Fail:Lapin maakunnan vaakuna.svg|20px]] '''[[Lappi]]'''
-| [[Rovaniemi]]
+| [[Rovanem']]
 | align=center | 183 318
 |- 
 | [[Fail:Kymenlaakson maakunnan vaakuna.svg|20px]] '''[[Kümenlaakso]]'''
@@ -103,12 +103,12 @@ Suomenman oficialižed keled oma [[suomen kel'|suomen]] da [[ročin kel'|ročin]
 | [[Vas]]
 | align=center | 179 140
 |- 
-| [[Fail:Kanta-Häme.vaakuna.svg|20px]] '''[[Kanta-Häme]]'''
-| [[Hämeenlinn]]
+| [[Fail:Kanta-Häme.vaakuna.svg|20px]] '''[[Kanta Häme]]'''
+| [[Hämenlidn]]
 | align=center | 175 253
 |- 
 | [[Fail:Pohjois-Karjala.vaakuna.svg|20px]] '''[[Pohjoižkarjal]]'''
-| [[Joensuu]]
+| [[Jogensu (lidn)|Jogensu]]
 | align=center | 165 869
 |- 
 | [[Fail:Etelä-Savo.vaakuna.svg|20px]] '''[[Suvisavo]]'''
@@ -116,7 +116,7 @@ Suomenman oficialižed keled oma [[suomen kel'|suomen]] da [[ročin kel'|ročin]
 | align=center | 153 715
 |- 
 | [[Fail:Etelä-Karjala.vaakuna.svg|20px]] '''[[Suvikarjal]]'''
-| [[Lappeenrant]]
+| [[Lapenrand]]
 | align=center | 133 249
 |- 
 | [[Fail:Kainuu.vaakuna.svg|20px]] '''[[Kainuu]]'''
@@ -132,6 +132,6 @@ Suomenman oficialižed keled oma [[suomen kel'|suomen]] da [[ročin kel'|ročin]
 | align=center | 34 014
 |} 
 
-{{Evropa}}
+{{Evrop}}
 
 [[Kategorii:Suomenma|*]]
