--- a/Suomenma.mw
+++ b/Suomenma.mw
@@ -79,7 +79,7 @@ Suomenman oficialižed keled oma [[suomen kel'|suomen]] da [[ročin kel'|ročin]
 | [[Kuopio]]
 | align=center | 248 143
 |- 
-| [[Fail:Satakunta.vaakuna.svg|20px]] '''[[Satakunt]]'''
+| [[Fail:Satakunta.vaakuna.svg|20px]] '''[[Sadakund]]'''
 | [[Pori]]
 | align=center | 226 537
 |- 
