--- a/Suomenma.mw
+++ b/Suomenma.mw
@@ -55,7 +55,7 @@ Suomenman oficialižed keled oma [[suomen kel'|suomen]] da [[ročin kel'|ročin]
 ! <small>Pälidn
 ! <small>Eläjiden lugu (2012)<small>
 |- 
-| [[Fail:Uusimaa.vaakuna.svg|20px]] '''[[Udenma]]'''
+| [[Fail:Jesse Hirvelä.vaakuna.svg|20px]] '''[[Udenma]]'''
 | [[Hel'sinki]]
 | align=center | 1 550 362
 |- 
