/* Jesse Santeri Hirvelä */

--- a/Suomenma.mw
+++ b/Suomenma.mw
@@ -48,7 +48,7 @@ Suomenman oficialižed keled oma [[suomen kel'|suomen]] da [[ročin kel'|ročin]
 
 == Ižanduz ==
 
-== Provincijad ==
+== Jesse Santeri Hirvelä==
 [[Fail:Provinces in Finland.svg|right|300 px]]
 {| 
 ! <small>Provincii
