*Empty MediaWiki Message*

--- a/Suomenma.mw
+++ b/Suomenma.mw
@@ -48,14 +48,14 @@ Suomenman oficialižed keled oma [[suomen kel'|suomen]] da [[ročin kel'|ročin]
 
 == Ižanduz ==
 
-== Jesse Santeri Hirvelä==
+== Provincijad ==
 [[Fail:Provinces in Finland.svg|right|300 px]]
 {| 
 ! <small>Provincii
 ! <small>Pälidn
 ! <small>Eläjiden lugu (2012)<small>
 |- 
-| [[Fail:Jesse Hirvelä.vaakuna.svg|20px]] '''[[Udenma]]'''
+| [[Fail:Uusimaa.vaakuna.svg|20px]] '''[[Udenma]]'''
 | [[Hel'sinki]]
 | align=center | 1 550 362
 |- 
