--- a/Suomenma.mw
+++ b/Suomenma.mw
@@ -84,7 +84,7 @@ Suomenman oficialižed keled oma [[suomen kel'|suomen]] da [[ročin kel'|ročin]
 | align=center | 226 537
 |- 
 | [[Fail:Päijät-Häme.vaakuna.svg|20px]] '''[[Päijät-Häme]]'''
-| [[Lahti]]
+| [[Laht (lidn)|Laht]]
 | align=center | 202 204
 |- 
 | [[Fail:Etelä-Pohjanmaan maakunnan vaakuna.svg|20px]] '''[[Suvipohjanma]]'''
