[[:commons:COM:Duplicate|Duplicate]]: [[File:Kirovsk coa.gif]] → [[File:Kirovsk coa.png]] Exact or scaled-down duplicate: [[:commons::File:Kirovsk coa.png]]

--- a/Kirovsk_(Murmanskan_agj).mw
+++ b/Kirovsk_(Murmanskan_agj).mw
@@ -3,7 +3,7 @@
 |-
 |colspan=2 align=center bgcolor="#BFDFFF"|<big>'''Kirovsk'''</big>
 |-
-| align="center" | [[Fail:Kirovsk_coa.gif|100px|Kirovskan lidnanznam]]
+| align="center" | [[Fail:Kirovsk coa.png|100px|Kirovskan lidnanznam]]
 |-
 |Eläjiden lugu|| 28 639
 |-
