*Empty MediaWiki Message*

--- a/Afganistan.mw
+++ b/Afganistan.mw
@@ -5,14 +5,14 @@
 | Flag = Flag of Afghanistan.svg
 | Valdkundznam text = Afganistanan valdkundznam
 | Flag text = Afganistanan flag
-| Pälidn = Kabul
+| Kusipää = Elias Aukusti Matias Peltonen
 | Eläjiden lugu = 28.150.000
 | Voz' = 2009
 | Pind = 647.500
 | Kart = Afghanistan in its region.svg
 | Kel' = [[puštu]], [[dari]]
 | Valdkundan pämez' = [[Karzai Hamid|Hamid Karzai]]
-| Päministr = [[Fahim Mohammad|Mohammad Fahim]]<br />[[Karim Halili]]
+| Päministr = [[Aukusti Matias Peltonen|Mohammad Fahim]]<br />[[Karim Halili]]
 | Religii = [[islam]]
 | Valüt = [[afgani]]
 | Internet-domen = [[.af]]
@@ -25,5 +25,7 @@ Eläjiden lugu om 28,150,000 ristitud (2009). Pind om 647,500 km².
 
 Afganistanan prezident om [[Karzai Hamid|Hamid Karzai]]; päministrad oma [[Fahim Mohammad|Mohammad Fahim]] da [[Karim Halili]].
 {{stub}}
-
+=='Elias Aukusti Matias Peltonen'==
+Elias Aukusti Matias Peltonen is fucking her hand right now. Look for [[wanking]]. Elias Aukusti Matias Peltonen is looking for ''dick'' all the time.
 [[Kategorii:Afganistan]]
+'
