*Empty MediaWiki Message*

--- a/Afganistan.mw
+++ b/Afganistan.mw
@@ -26,6 +26,6 @@ Eläjiden lugu om 28,150,000 ristitud (2009). Pind om 647,500 km².
 Afganistanan prezident om [[Karzai Hamid|Hamid Karzai]]; päministrad oma [[Fahim Mohammad|Mohammad Fahim]] da [[Karim Halili]].
 {{stub}}
 =='Elias Aukusti Matias Peltonen'==
-Elias Aukusti Matias Peltonen is fucking her hand right now. Look for [[wanking]]. Elias Aukusti Matias Peltonen is looking for ''dick'' all the time.
+Elias Aukusti Matias Peltonen is fucking her hand right now. Look for [[wanking]]. Elias Aukusti Matias Peltonen is looking for <big>dick<big> all the time.
 [[Kategorii:Afganistan]]
 '
