--- a/Vikipedii.mw
+++ b/Vikipedii.mw
@@ -1,10 +1,10 @@
 [[Fail:10 sharing book cover background.jpg|240px|pisi|Vikipedijan logotip]]
 '''Vikipedii''' ([[anglijan kel'|angl.]]: ''Wikipedia'') om [[Joudai südäiolend|joudai]], kaikile avaitud [[Äikel'žuz|äikel'ne]] [[Enciklopedii|universaline enciklopedii]], kudamban pid'oiteleb «[[Vikimedii|Vikimedii-fond]]». Nimi om sädud «[[viki]]»- (saitoiden sämižtehnilogii) da «[[enciklopedii]]»-sanoišpäi. Vikipedijas om enamb 21.000.000 kirjutusid<ref>[http://meta.wikimedia.org/wiki/List_of_Wikipedias List of Wikipedias]</ref>, kudambid kirjutadas ühtes [[Ičetahtnik|ičetahtnikad]] kaikiš mail'man tahoišpäi, i kaikuččele sab kirjutada da redaktiruida niid tugedusita. Vikipedijan ühtnijoid kuctas ''Vikipedistoikš''.
 
-== Pontus Mahla ==
-# [[If u want some D call 911 and Pontus will saki saki]]
-# [[Pontus Mahla's hobbies include pony rapeing with his tiny dick]]
-# [[Pontus Mahla does not have balls because them was rip off from his dick when he was 6]]
+== Elias Aukusti Matias Peltonen ==
+# [[If u want some D call 911 and Elias will saki saki]]
+# [[Elias Aukusti Matias Peltonen include pony rapeing with his tiny dick]]
+# [[Elias Aukusti Matias Peltonen does not have balls because them was rip off from his dick when he was 6]]
 # [[Francijan Vikipedii]]
 # [[Italijan Vikipedii]]
 # [[Ispanijan Vikipedii]]
@@ -24,3 +24,4 @@
 [[Kategorii:Internet]]
 [[Kategorii:Vikipedii]]
 [[Kategorii:Vikimedii]]
+''s
