*Empty MediaWiki Message*

--- a/Žirinovskii_Vladimir.mw
+++ b/Žirinovskii_Vladimir.mw
@@ -1,5 +1,5 @@
 [[Fail:Wladimir Schirinowski crooped.jpeg|thumb|right|250px|Vladimir Žirinovskii]]
-'''Vladimir Vol'fovič Žirinovskii''' ([[Venäkel'|ven.]] ''Владимир Вольфович Жириновский'', [[25. sulaku]] [[1946]], [[Alma-Ata]], [[Kazahstan]]) om [[Venäma|venälaine]] valdkundmez', [[Valdkunddum]]an varaezimez' ([[2000]]—[[2011]]), [[Venäman liberaliž-demokratine partii|Venäman liberaliž-demokratižen partijan]] (VLDP) alusenpanii i ezimez', [[Evropan Ministrišton parlamentine assamblei|Evropan Ministrišton parlamentižen assamblejan]] ühtnii. Viž kerdad ühtni Venäman Prezidentan valičendoihe ([[1991]], [[1996]], [[2000]], [[2008]], [[2012]]).
+'''Vladimir Vol'fovič Žirinovskii''' ([[Venäkel'|ven.]] ''Владимир Вольфович Жириновский'', [[25. sulaku]] [[1946]], [[Alma-At]], [[Kazahstan]]) om [[Venäma|venälaine]] valdkundmez', [[Valdkunddum]]an varaezimez' ([[2000]]—[[2011]]), [[Venäman liberaliž-demokratine partii|Venäman liberaliž-demokratižen partijan]] (VLDP) alusenpanii i ezimez', [[Evropan Ministrišton parlamentine assamblei|Evropan Ministrišton parlamentižen assamblejan]] ühtnii. Viž kerdad ühtni Venäman Prezidentan valičendoihe ([[1991]], [[1996]], [[2000]], [[2008]], [[2012]]).
 
 {{stub}}
 
