*Empty MediaWiki Message*

--- a/Almati.mw
+++ b/Almati.mw
@@ -1,6 +1,6 @@
 {| class="infobox bordered" align=right cellpadding=4 cellspacing=0 width=275 style="clear:right; margin: 0 0 1em 1em; background: #f9f9f9;  font-size: 95%;"
 |-
-|colspan=2 align=center bgcolor="#BFDFFF"|<big>'''Almati'''</big>
+|colspan=2 align=center bgcolor="#BFDFFF"|<big>'''Alma-At'''</big>
 |-
 | align="center" | 
 | align="center" | 
@@ -9,13 +9,13 @@
 | align="center" | 
 <br /><small></small>
 |-
-|Eläjiden lugu|| 1 471.800 (2010)
+|Eläjiden lugu|| 1.471.800 (2010)
 |-
-|Pind|| 497,8 км²
+|Pind|| 497,8 km²
 |-
 |Mer|| 
 |}
-'''Almati''' ([[Kazahan kel'|kazahan kelel]]: ''Алматы'') om [[Kazahstan]]an lidn. 
+'''Alma-At''', vai '''Almati''' ([[Kazahan kel'|kazahan kelel]]: ''Алматы'', [[venäkel'|venäkelel]]: ''Алма-Ата'') om [[Kazahstan]]an lidn. 
 
 == Istorii ==
 
