--- a/Vepsläižed.mw
+++ b/Vepsläižed.mw
@@ -1,5 +1,5 @@
 [[Fail:Flag of Vepsia.svg|pisi|250px|[[Vepsän flag]]]]
-'''Vepsläižed''' ([[Venäkel'|venäkelel]]: ''вепсы, весь'') — vähäluguine suomalaiž-ugrilaine rahvaz. Vepsläižed elädas [[Karjalan Tazovaldkund|Karjalas]], [[Leningradan agj|Leningradan]] da [[Vologdan agj|Vologdan agjoiš]] [[Venäma]]s. 2006 voden sulakuspäi vepsän rahvaz om mülütadud Venäläižen Federacijan igähižiden vähäluguižiden rahvahiden nimikirjuteshe. Vepsän rahvahas om koume etnografišt palad:
+'''Vepsläižed''' — vähäluguine suomalaiž-ugrilaine rahvaz. Vepsläižed elädas [[Karjalan Tazovaldkund|Karjalas]], [[Leningradan agj|Leningradan]] da [[Vologdan agj|Vologdan agjoiš]] [[Venäma]]s. 2006 voden sulakuspäi vepsän rahvaz om mülütadud Venäläižen Federacijan igähižiden vähäluguižiden rahvahiden nimikirjuteshe. Vepsän rahvahas om koume etnografišt palad:
 * Pohjoižed (Änižröunan) vepsläižed — hö elädas [[Änine|Änižen]] päivlaskmrandal, [[Karjalan tazovaldkund]]an suves (enččes [[Vepsän rahvahaline volost’|Vepsän rahvahaližes volostiš]], kudamban pälžilon oli [[Šoutjärv'|Šoutjärv' vai Šoutarv']]).
 * Keskmäižed vepsläižed (keskvepläižed) — hö elädas [[Ojat' (jogi)|Ojatin]] keskmäižel da ülähäižel joksmusel, [[Paksjogi|Paksjogen]] (Pašjogen) da [[Kapš]]jogen purtkiden rajonas ([[Leningradan agj]]an päivnouzmpol'), Vologdan agjan päivlaskmpoles.
 * Suvivepsläižed — hö elädas [[Vepsän ülüz|Vepsän ülüsen]] suvipautkil ([[Leningradan agj]]an päivnouzmpol').
