*Empty MediaWiki Message*

--- a/Vepsän_ülüz.mw
+++ b/Vepsän_ülüz.mw
@@ -1,4 +1,4 @@
-'''Vepsän ülüz''' ([[venäkel'|ven.]]: ''Вепсовская возвышенность'') om [[ülüz]] [[Leningradan agj]]an homendezbokas.
+'''Vepsän ülüz''' om [[ülüz]] [[Leningradan agj]]an homendezbokas.
 
 Korktuz om läz 302 metrad.
 {{stub}}
