*Empty MediaWiki Message*

--- a/Vepsän_Vikii.mw
+++ b/Vepsän_Vikii.mw
@@ -1,5 +1,5 @@
 [[Fail:Вепсян_Викий.png|thumb|right|Vepsän Vikijan logotip]]
-'''Vepsän Vikii''' (UVK: ''Вепсян Викий'') om viki-enciklopedii [[Vepsän kel'|vepsän kelel]], kudamban kirjutused kirjutadas [[Uz' vepsän kirillic|udel vepsän kirillical]].
+'''Vepsän Vikii''' om viki-enciklopedii [[Vepsän kel'|vepsän kelel]], kudamban kirjutused kirjutadas [[Uz' vepsän kirillic|udel vepsän kirillical]].
 
 Sen adres Internetas om http://veps-kir.wikia.com/ 
 
