*Empty MediaWiki Message*

--- a/Narv_(lidn).mw
+++ b/Narv_(lidn).mw
@@ -1,3 +1,4 @@
+{{tärtused|Narv}}
 [[Fail:Hermannsfeste narva.jpg|thumb|Narv]]
 '''Narv''' ([[estin kel'|estin kelel]]: ''Narva'') om lidn [[Estinma]]s.
 
