*Empty MediaWiki Message*

--- a/Narv.mw
+++ b/Narv.mw
@@ -1,1 +1,14 @@
-#suuna [[Narv (lidn)]]
+'''Narv''':
+* '''[[Narv (lidn)]]'''
+* '''[[Narv (jogi Estinman i Venäman röunoiš)]]'''
+* [[Narv (jogi Vaugedvenämas)]]
+* [[Narv (jogi Venäman Merenrandaližes randas)]]
+* [[Narv (avtote)]]
+
+=== Kacu mugažo ===
+* [[«Narv»-opergrupp]]
+* [[Narva (jumalankodikundtulend)]]
+* [[Alanarv]]
+* [[Narvanlaht]]
+* [[Narvan Tazovaldkund]]
+{{t}}
