*Empty MediaWiki Message*

--- a/Možg.mw
+++ b/Možg.mw
@@ -1,4 +1,6 @@
 '''Možg''' ([[Venäkel'|ven]].: ''Можга'', [[Udmurtan kel'|udm]].: ''Можга'') om lidn [[Venäma]]s, [[Udmurtijan Tazovaldkund]]as.
+
+Lidnas elädas 49 284 ristitud.
 {{stub}}
 
 [[Kategorii:Venäman lidnad]]
