*Empty MediaWiki Message*

--- a/Baltijan_meren_suomalaižed_keled.mw
+++ b/Baltijan_meren_suomalaižed_keled.mw
@@ -12,6 +12,7 @@ baltijan meren suomalaižed keled
 * [[vepsän kel']]
 * [[vodin kel']]
 * [[estin kel']]
+* [[virun kel']]
 * [[livin kel']]
 
 {{Vepsän Vikii|[http://veps-kir.wikia.com/wiki/Балтиян_мерен_суомалайжед_келед Балтиян мерен суомалайжед келед]}}
