--- a/Karr_Sara_Rouz.mw
+++ b/Karr_Sara_Rouz.mw
@@ -1,4 +1,4 @@
-'''Sara Rouz Karr''' ([[anglijan kel'|angl.]]: ''Sarah Rose Karr''; sünd. [[13. kül'mku]] [[1984]], [[Kalifornii]]-štat, [[AÜV]]) om amerikalaine ekslapsenaktör. Hänen kaikiš tetabižiš rolid oliba «[[Päivkodin policijanmez']]»-, «[[Bethoven 1]]»- da «[[Bethoven 2]]»-fil'moiš.
+'''Sara Rouz Karr''' ([[anglijan kel'|angl.]]: ''Sarah Rose Karr''; sünd. [[13. kül'mku]] [[1984]], [[Kalifornii]]-štat, [[AÜV]]) om amerikalaine ekslapsenaktör. Hänen kaikiš tetabambad rolid oliba «[[Päivkodin policijanmez']]»-, «[[Bethoven 1]]»- da «[[Bethoven 2]]»-fil'moiš.
 
 Edelespäi [[2001]]-žes vodes hän lopi «New College»-kolledžan [[Florid]]-štatas. Hänen edesine elo om tundmatoi.
 
