*Empty MediaWiki Message*

--- a/Inkeriläižed.mw
+++ b/Inkeriläižed.mw
@@ -2,10 +2,6 @@
 | style="width:22px" |
 | ''Nece kirjutuz ei ole kirjutadud lophusai''.
 |}
-{| align=center class=toccolours style="text-align: center; width: 100%; font-size: 125%; clear:both; margin:0.75em auto"
-| style="width:22px" |
-| ''Necen kirjutusen pidab kodvda''.
-|}
 
 [[Image:Inkerin_lippu.svg|thumb|right|Nacionaline inkeriläižiden flag]]
 '''Inkeriläižed''' ('''inkerinsuomalaižed''', '''ingermanlandijalaižed''', '''ingermanlandcad''') oma subetnine [[suomalaižed|suomalaižiden]] grupp, kudamb eläb istoriž-geografižen [[Ingermanlandii]] agjan territorijal. Ingermanlandijalaižiden kel' pidad [[suomen kel'|suomen kelen]] päivnouzmpol'žid paginoid. Uskondan mödhe tradicižikš pidadas lüteraništ jumalankodikundad, no heiden pala pidab hristianuskondad.
@@ -93,7 +89,7 @@ Päivlaskmpol'žes Ingermanlandijas ortodoksine uskond kaičihe paremba. Rahvaz 
 |}
 [[Image:InkeriKoppen1849.png|200px|thumb|Ingermanlandijan etnografine kart. 1849 г.]]
 
-Territorii linneb venälaižen udes jäl'ghe [[Piterin]] alusen jo. No eskai ühesandentoštkümnenden voz'sadan augun Piterin ümbrišt oli praktižikš kogonaz suomenkeližen. Kahtendenkümnenden voz'sadan augule oliba kaks' surt rajonad suomalaižen rahvahan korktan palanke: Karjalan kaglhan ingermanlandijalaine pala ([[Piterin ujezd|Piterin]] da [[Šlissel'burgan ujezd|Šlissel'burgan ujezdoiden pohjoine pala) da rajon pidust' linijad [[Petergof]] — [[Rusked Külä]] — [[Gatčin]] ([[Rusktan külän ujezd]]an päivlaskmpol'ne pala da [[Petergofan ujezd]]an päivnouzmpol'ne pala). 
+Territorii linneb venälaižen udes jäl'ghe [[Piter]]in alusen jo. No eskai ühesandentoštkümnenden voz'sadan augun Piterin ümbrišt oli praktižikš kogonaz suomenkeližen. Kahtendenkümnenden voz'sadan augule oliba kaks' surt rajonad suomalaižen rahvahan korktan palanke: [[Karjalan kaglaz|Karjalan kaglhan]] ingermanlandijalaine pala ([[Piterin ujezd|Piterin]] da [[Šlissel'burgan ujezd|Šlissel'burgan ujezdoiden]] pohjoine pala) da rajon pidust' linijad [[Petergof]] — [[Rusked Külä]] — [[Gatčin]] ([[Rusktan külän ujezd]]an päivlaskmpol'ne pala da [[Petergofan ujezd]]an päivnouzmpol'ne pala). 
 
 [[Kategorii:Rahvahad]]
 
