--- a/Vaduc.mw
+++ b/Vaduc.mw
@@ -10,7 +10,7 @@
 |Pind|| 17,3 km²
 |}
 [[Fail:Vaduz Herrengasse.jpg|thumb|right|250px|Vaduc]]
-'''Vaduz''' om [[Lihtenštein]]an pälidn.
+'''Vaduc''' om [[Lihtenštein]]an pälidn.
 
 [[Kategorii:Lihtenšteinan lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
