--- a/Saha_Tazovaldkund.mw
+++ b/Saha_Tazovaldkund.mw
@@ -1,5 +1,6 @@
 [[Fail:Flag of Sakha.svg|150px|thumb|Saha (Jakutijan) Tazovaldkundan flag]]
 [[Fail:Coat of Arms of Sakha (Yakutia).svg|100px|thumb|Saha (Jakutijan) Tazovaldkundan znam]]
+[[File:Sakha Yakutia rep.png|right|thumb|250px]]
 '''Saha (Jakutijan) Tazovaldkund''' ([[Venäkel'|ven.]]: ''Республика Саха (Якутия)'', [[Jakutan kel'|jakut.]]: ''Саха Өрөспүүбүлүкэтэ'') om üks' [[Venälaine Federacii|Venälaižen Federacijan]] tazovaldkundoišpäi.
 
 Mülüb [[Edahaižen Päivnouzmpolen federaline ümbrik|Edahaižen Päivnouzmpolen ümbrikho]].
