'Coats of arms of Belgium Government.svg' -> 'State Coat of Arms of Belgium.svg' using [[commons:Commons:GlobalReplace|GlobalReplace v0.2a - Fastily's PowerToys]]: new vector version

--- a/Bel'gii.mw
+++ b/Bel'gii.mw
@@ -1,7 +1,7 @@
 {{Valdkund
 | Nimi = Bel'gii<br />België<br />Belgique<br />Belgien
 | Flag = Flag of Belgium.svg
-| Valdkundznam = Coats of arms of Belgium Government.svg
+| Valdkundznam = State Coat of Arms of Belgium.svg
 | Valdkundznam text = Bel'gijan valdkundznam
 | Flag text = Bel'gijan flag
 | Pälidn = Brüssel'
