--- a/Alamad.mw
+++ b/Alamad.mw
@@ -1,7 +1,7 @@
 {{1000}}
 {{Valdkund
 | Nimi = Alaman kunigahuz<br />Koninkrijk der Nederlanden
-| Valdkundznam = Coat_of_arms_of_the_Netherlands.svg
+| Valdkundznam = Royal Coat of Arms of the Netherlands.svg
 | Flag = Flag_of_the_Netherlands.svg
 | Valdkundznam text = Alamaiden valdkundznam
 | Flag text = Alamaiden flag
