'Coat of arms of the Netherlands.svg' -> 'Royal Coat of Arms of the Netherlands.svg' using [[commons:Commons:GlobalReplace|GlobalReplace v0.2a - Fastily's PowerToys]]: new svg version

--- a/Evropan_valdkundad.mw
+++ b/Evropan_valdkundad.mw
@@ -3,7 +3,7 @@
 |-
 ! Valdkundflag !! Valdkundznam !! Valdkund !! Pälidn !! Kel'
 |-
-| [[File:Flag of the Netherlands.svg|150px]] || [[File:Coat_of_arms_of_the_Netherlands.svg|150px]] || [[Alamad]] || [[Amsterdam]] || [[Alaman kel'|alaman]]
+| [[File:Flag of the Netherlands.svg|150px]] || [[File:Royal Coat of Arms of the Netherlands.svg|150px]] || [[Alamad]] || [[Amsterdam]] || [[Alaman kel'|alaman]]
 |-
 | [[File:Flag of Albania.svg|150px]] || [[File:Albania state emblem.svg|150px]] || [[Albanii]] || [[Tiran]] || [[Albanijan kel'|albanijan]]
 |-
