'Coat of arms of the Netherlands.svg' -> 'Royal Coat of Arms of the Netherlands.svg' using [[commons:Commons:GlobalReplace|GlobalReplace v0.2a - Fastily's PowerToys]]: new svg version

--- a/Alamaiden_valdkundznam.mw
+++ b/Alamaiden_valdkundznam.mw
@@ -1,4 +1,4 @@
-[[Fail:Coat of arms of the Netherlands.svg|right|250px]]
+[[Fail:Royal Coat of Arms of the Netherlands.svg|right|250px]]
 '''Alamaiden valdkundznam''' ([[alaman kel'|alam.]]: ''Wapen van het Koninkrijk der Nederlanden'') om vahvištadud [[1815]]-nden voden uhokul.
 {{stub}}
 
