*Empty MediaWiki Message*

--- a/Rodriges_Luis.mw
+++ b/Rodriges_Luis.mw
@@ -1,4 +1,6 @@
 '''Luis Rodriges Salasar''' ([[ispanijan kel'|isp.]]: ''Luis Rodríguez Salazar''; sünd. [[1948]], [[Fuente-el'-Fresno]], [[Ispanii]]) om ispanijalaine prodüser da [[DJ]]; [[Modern Talking]]:an da toiž. muzikprojektoiden prodüser.
+
+[[Lian Ross]]-pajatajan mužik.
 {{stub}}
 {{Modern Talking}}
 
