*Empty MediaWiki Message*

--- a/Roksana_(pajatai).mw
+++ b/Roksana_(pajatai).mw
@@ -1,4 +1,5 @@
 __NOTOC__
+<!--есть будущие интервики [[vot:Roxanne (laulaja)]]-->
 '''Roksanna''' ([[saksan kel'|saks.]]: ''Roxanne''; sünd. [[1967]], [[Ven]], [[Avstrii]]) om avstrijalaiž-saksalaine [[evrodisko]]pajatai hätkelitomanke karjeranke.
 
 Hänen muzikkarjer augotab 1981-žes vodes. Debütine singl, «Charlene», om pästtud [[1985]]-žes vodes, i linni populärižeks evropalaižiš čartoiš, a mugažo sil oli eraz satuz [[NSTÜ]]:s. Kaks' vodes päliči necen pajon kaver om änetud [[Bad Boys Blue]]:lpäi (heiden versii oli populärine mugažo, hot' ei olend pästtud kut singl).
@@ -21,4 +22,3 @@ Pajatai pästi völ kaks' singloid edelespäi, no ned oliba läz satusekatomad. 
 
 [[Kategorii:Pajatajad kirjamišton mödhe]]
 [[Kategorii:Avstrijan pajatajad]]
-<!--[[vot:Roxanne (laulaja)]]-->
