*Empty MediaWiki Message*

--- a/Roksana_(pajatai).mw
+++ b/Roksana_(pajatai).mw
@@ -4,7 +4,7 @@ __NOTOC__
 
 Hänen muzikkarjer augotab 1981-žes vodes. Debütine singl, «Charlene», om pästtud [[1985]]-žes vodes, i linni populärižeks evropalaižiš čartoiš, a mugažo sil oli eraz satuz [[NSTÜ]]:s. Kaks' vodes päliči necen pajon kaver om änetud [[Bad Boys Blue]]:lpäi (heiden versii oli populärine mugažo, hot' ei olend pästtud kut singl).
 
-Pajatai pästi völ kaks' singloid edelespäi, no ned oliba läz satusekatomad. 1987-žes vodes hän ezini «New Romance»-duetan mülükundas; se projekt äneti vaiše üks' singlad i čihozi.
+Pajatai pästi völ kaks' singloid edelespäi, no ned oliba vähemb satusekatomad. 1987-žes vodes hän ezini «New Romance»-duetan mülükundas; se projekt äneti vaiše üks' singlad i čihozi.
 
 == Diskografii ==
 
