*Empty MediaWiki Message*

--- a/Koreb_Elidaspäi.mw
+++ b/Koreb_Elidaspäi.mw
@@ -1,4 +1,4 @@
-'''Koreb (Koronbos) [[Elid]]aspäi''' ([[grekan kel'|grek.]]: ''Κόροιβος Ἠλεῖος''; ?—?) oli eraz keitai, kudamb linni ezmäižeks (tetabišpäi) vägestajaks [[Olimpiadvändod|Olimpiadvändoiš]] (ezmäižed Vändod oli 776-žes vodes e. m. e.).
+'''Koreb (Koronbos) [[Elid]]aspäi''' ([[grekan kel'|grek.]]: ''Κόροιβος Ἠλεῖος''; ?—?) oli eraz keitai, kudamb linni ezmäižeks (tetabišpäi) vägestajaks [[Olimpiadvändod|Olimpiadvändoiš]] (ezmäižed Vändod oliba 776-žes vodes e. m. e.).
 
 Hän ezini kut joksii 192 metroiden distancijal.
 {{stub}}
