--- a/Inkeriläižed.mw
+++ b/Inkeriläižed.mw
@@ -4,7 +4,7 @@
 |}
 
 [[Image:Inkerin_lippu.svg|thumb|right|Nacionaline inkeriläižiden flag]]
-'''Inkeriläižed''' ('''inkerinsuomalaižed''', '''ingermanlandijalaižed''', '''ingermanlandcad''') oma subetnine [[suomalaižed|suomalaižiden]] grupp, kudamb eläb istoriž-geografižen [[Ingermanlandii]] agjan territorijal. Ingermanlandijalaižiden kel' pidad [[suomen kel'|suomen kelen]] päivnouzmpol'žid paginoid. Uskondan mödhe tradicižikš pidadas lüteraništ jumalankodikundad, no heiden pala pidab hristianuskondad.
+'''Inkeriläižed''' ('''inkerinsuomalaižed''', '''ingermanlandijalaižed''', '''ingermanlandijansuomalaižed''', '''ingermanlandcad''') oma subetnine [[suomalaižed|suomalaižiden]] grupp, kudamb eläb istoriž-geografižen [[Ingermanlandii]] agjan territorijal. Ingermanlandijalaižiden kel' pidad [[suomen kel'|suomen kelen]] päivnouzmpol'žid paginoid. Uskondan mödhe tradicižikš pidadas lüteraništ jumalankodikundad, no heiden pala pidab hristianuskondad.
 
 == Istorii ==
 Ingermanlandijalaine subetnos formiruihe sen tagut, miše [[Ročinma]]n administracii sirdi [[evremeisad|evremeisoiden]] [[Karjalan kaglaz|Karjalan kaglhaspäi]] da [[savakotad|savakotoiden]] [[Suomenman]] päivnouzmpol'žes [[Savo]]-provincijaspäi paloid [[Stolbovon kožund]]an mödhe sadud uzile ižoralaižile maile. [[Ižoran ma]]n finnizacii oli kebnan demografižiden kadoiden [[Smutan pord]]an aigan tagut.
