--- a/Mišel'_(pajatai).mw
+++ b/Mišel'_(pajatai).mw
@@ -9,6 +9,7 @@ Venämas Mišel' tetab mugažo ühthižtön [[Rudenko Leonid|DJ Leonidanke Ruden
 === Singlad ===
 * ''Only You (feat. [[Ropča Andrei|Randi]])'' (2011) — RUS #8, EUR #98<ref>http://top40-charts.com/song.php?sid=31937</ref>
 * ''It Feels So Good'' (2012) — RUS #17<ref>http://top40-charts.com/song.php?sid=33777</ref>
+* ''Ray of Light (feat. Randi)'' (2013)
 
 == Homaičendad ==
 <references />
