*Empty MediaWiki Message*

--- a/Joucned.mw
+++ b/Joucned.mw
@@ -1,5 +1,5 @@
 [[Fail:Schwan 023.jpg|pisi|300px|Joucen]]
-'''Joucen''' (lat.: ''Cygnus'') om mec[[lind]].
+'''Joucen''' (lat.: ''Cygnus'') om [[lind]].
 
 {{stub}}
 
