--- a/Izrail'.mw
+++ b/Izrail'.mw
@@ -33,9 +33,9 @@ Pind — 22 072 km².
 == Kacu mugažo ==
 * [[Mossad]]
 * [[Kibuc]]
-* [[Palestina]]
+* [[Palestin]]
 * [[Davidan tähtaz]]
-* [[Menora]]
+* [[Menor]]
 * [[Evrejalaižed]]
 
 {{stub}}
