*Empty MediaWiki Message*

--- a/Päiväine.mw
+++ b/Päiväine.mw
@@ -12,7 +12,5 @@ Päiväižen da [[Maidte]]n galaktikan keskusen keskes om 26 000 lämoivot; Päi
 * [http://sunlife.net.ru/ Päiväine da Man elo] (venäkelel)
 * [http://www.femto.com.ua/articles/part_2/3751.html Päiväine. Fizine enciklopedii]
 
-{{DEFAULTSORT:Päiväine}}
-
-[[Kategorii:Astronomii]]
-[[Kategorii:Tähthad]]
+[[Kategorii:Päiväine|*]]
+[[Kategorii:Tähthad kirjamišton mödhe]]
