*Empty MediaWiki Message*

--- a/WASP-64.mw
+++ b/WASP-64.mw
@@ -3,4 +3,4 @@
 Om läz ühtensurtte [[Päiväine|Päiväiženke]]. Ümbri WASP:as-64 punose ei vähemba üks' planetal.
 {{stub}}
 
-[[Kategorii:Tähthad]]
+[[Kategorii:Tähthad kirjamišton mödhe]]
