--- a/Surman_kel'dand.mw
+++ b/Surman_kel'dand.mw
@@ -1,6 +1,6 @@
 '''[[Surm]]an kel'dand''' om [[jurisprudencii|juridine]] kel'dand kolda märhapandud sijoiš ([[štraf]]an varuližuses kolijan heimolaižile da m. e.).
 
-Surm om kel'dandas:
+Surm om kel'dandan al:
 * [[Fail:Flag of Spain.svg|border|20px]] [[Lanharon]], [[Ispanii]] — päkhuižen sijaližen kaumišton tagapäi
 * [[Fail:Flag of France.svg|border|20px]] [[Kün'o]], [[Francii]] — päkhuižen sijaližen kaumišton tagapäi
 * [[Fail:Flag of France.svg|border|20px]] [[Le Lavandu]], [[Francii]] — päkhuižen sijaližen kaumišton tagapäi
