*Empty MediaWiki Message*

--- a/Depressii.mw
+++ b/Depressii.mw
@@ -1,4 +1,4 @@
-[[Fail:Depression-loss of loved one.jpg|thumb|right|250px|Neižne depressijas (improvizacii)]]
+[[Fail:Depression-loss of loved one.jpg|thumb|right|250px|Neižne depressijas (imitacii)]]
 '''Depressii''' ('''depressivine olend''') om kaikiš levitadud [[psihine palahtelend]]. 5—10% ristitištod mokitas sišpäi.
 
 M. k. „depressivine triad“ harakterizuib:
