--- a/Bethoven_Lüdvig_van.mw
+++ b/Bethoven_Lüdvig_van.mw
@@ -1,5 +1,5 @@
 {{1000}}
-[[Fail:Beethoven.jpg|pisi|Lüdvig van Bethoven]]
+[[Fail:Beethoven.jpg|thumbnail|right|250px|Lüdvig van Bethoven]]
 '''Lüdvig van Bethoven''' (germanijan kelel: ''Ludwig van Beethoven''; 17.12.1770, [[Bonn]], [[Germanii]] — 26.03.1827, [[Vena]], [[Avstrii]]) — saksalaine [[kompozitor]], [[dirižor]] da [[pianist]], üks' «[[Venalaine klassik|venalaižiš klassikoišpäi]]».
 
 Bethoven om kaikiš järedamb person [[Evrop]]an klassižes muzikas keskes [[Klassicizm|klassicizmad]] da [[romantizm]], lujas arvostadud kompozitor, kenen muzikad edestadas lujas paksus. 
