*Empty MediaWiki Message*

--- a/WASP-64.mw
+++ b/WASP-64.mw
@@ -1,6 +1,6 @@
-'''WASP-64''' om [[tähtaz]] [[Sur' Koir]]-tähthištas. Se om 1141 [[lämoivoz'|lämoivot]] meišpäi.
+'''WASP-64''' om [[tähtaz]] [[Sur' Koir]]-tähthištos. Se om 1141 [[lämoivoz'|lämoivoziš]] meišpäi.
 
-Om läz ühtensurtte [[Päiväine|Päiväiženke]]. Ümbri WASP:as-64 punose ei vähemba üks' planetal.
+Om läz ühtensurtte [[Päiväine|Päiväiženke]]. Ümbri WASP:as-64 punose ei vähemba üks' planetad.
 {{stub}}
 
 [[Kategorii:Tähthad kirjamišton mödhe]]
