*Empty MediaWiki Message*

--- a/Jahtel'j.mw
+++ b/Jahtel'j.mw
@@ -1,6 +1,6 @@
-'''Jahtel'j''' ([[venäkel'|ven.]]: ''Яхтелья'') om pen' jogi [[Venäma]]n [[Sverdlovskan agj]]as.
+'''Jahtel'j''' ([[venäkel'|ven.]]: ''Яхтелья'') om pen' jogi [[Venäma]]n [[Sverdlovskan agj]]as. Om [[Vižai]]-jogen päližajogi, [[Irtiš]]-jogen basseinan pala.
 
-Jogen piduz om 15 km.
+Jogen piduz om 15 kilometrad.
 {{stub}}
 
 [[Kategorii:Joged kirjamišton mödhe]]
