--- a/Narv_(jogi_Estinman_i_Venäman_röunoiš).mw
+++ b/Narv_(jogi_Estinman_i_Venäman_röunoiš).mw
@@ -2,7 +2,7 @@
 [[Fail:Ust-Narva-17.jpg|thumb|right|250px|Narv [[Narvan Jogensu]]-lidnan rajonas]]
 '''Narv''' ([[estin kel'|est.]]: ''Narva jõgi'', [[venäkel'|ven.]]: ''Нарва'') om jogi [[Estinma]]n i [[Venäma]]n röunoiš.
 
-Jogen piduz om 77 km, basseinan pind om 56,200 km².
+Jogen piduz om 77 kilometrad, basseinan pind om 56,200 km².
 {{stub}}
 
 [[Kategorii:Joged kirjamišton mödhe]]
