*Empty MediaWiki Message*

--- a/Zelöna_Gur.mw
+++ b/Zelöna_Gur.mw
@@ -1,4 +1,4 @@
-'''Zelöna-Gura''' ([[Pol'šan kel'|pol'š]].: ''Zielona Góra'') om lidn [[Pol'šanma|Pol'šanmas]]. Se om üks' [[Lübušan saodaveikundan|Lübušan saodaveikundan]] pälidnoišpäi. Toine pälidn om [[Gožuv-Vel'kopol'ski]].
+'''Zelöna Gur''' ([[Pol'šan kel'|pol'š]].: ''Zielona Góra'') om lidn [[Pol'šanma|Pol'šanmas]]. Se om üks' [[Lübušan saodaveikundan|Lübušan saodaveikundan]] pälidnoišpäi. Toine pälidn om [[Gožuv-Vel'kopol'ski]].
 
 {{stub}}
 [[Kategorii:Pol'šanman lidnad‎]]
