*Empty MediaWiki Message*

--- a/Pol'šanman_administrativiž-territorialine_jagand.mw
+++ b/Pol'šanman_administrativiž-territorialine_jagand.mw
@@ -81,7 +81,7 @@ Vodel 1999 Pol'šanman oma 16 sodaveikundad, 379 povätad (65 lidnalaižed da 31
 |-
 |[[File:POL województwo lubuskie COA.svg|25px]]
 |[[Lübušan sodaveikund]]
-|[[Gožuv-Vel'kopol'ski]] da&nbsp;[[Zelöna-Gura]]
+|[[Gožuv-Vel'kopol'ski]] da&nbsp;[[Zelöna Gur]]
 |13 988
 |1 008 962
 |72,13
