*Empty MediaWiki Message*

--- a/Gožuv-Vel'kopol'ski.mw
+++ b/Gožuv-Vel'kopol'ski.mw
@@ -1,4 +1,4 @@
-'''Gožuv-Vel'kopol'ski''' ([[Pol'šan kel'|pol'š]].: ''Gorzów Wielkopolski'') om lidn [[Pol'šanma]]s. Se om üks' [[Lübušan saodaveikundan]] pälidnoišpäi. Toine pälidn om [[Zelöna-Gura]].
+'''Gožuv-Vel'kopol'ski''' ([[Pol'šan kel'|pol'š]].: ''Gorzów Wielkopolski'') om lidn [[Pol'šanma]]s. Se om üks' [[Lübušan saodaveikundan]] pälidnoišpäi. Toine pälidn om [[Zelöna Gur]].
 {{stub}}
 
 [[Kategorii:Pol'šanman lidnad]]
