--- a/Mec.mw
+++ b/Mec.mw
@@ -6,6 +6,7 @@
 * ''Harv mec, harvišt'' — mecpind ladvištoiden ümbištundmäranke 0,2—0,3 vähemb.
 * ''Kor'b, šohro, mecakišt, org'' — paks da amuine da edahaine mec.
 * ''Lomžom'' — mec äiluguižiden lohkaidud puidenke.
+* ''Madališt, barbikoikaz mec'' — madal ladvoil mec.
 * ''Pihk'' — paks kavag'mec.
 * ''Puregišt'' — paks nor' mec.
 * ''Rädeg'' — paks da amuine kuz'ne mec.
