*Empty MediaWiki Message*

--- a/Saamen_keled.mw
+++ b/Saamen_keled.mw
@@ -99,6 +99,11 @@
 | latinan
 |-
 |}
+
+== Irdkosketused ==
+* [http://yle.fi/uutiset/sapmi Uzištod saameks].
+
 {{stub}}
 
+[[Kategorii:Keled|*]]
 [[Kategorii:Saamen keled|*]]
