*Empty MediaWiki Message*

--- a/Olud.mw
+++ b/Olud.mw
@@ -4,6 +4,11 @@
 
 Olud om koumanz' populärine jom mail'mas ([[vezi|veden]] da [[čai|čajan]] jäl'ghe) i kaikiš populärižemb alkogoline jom.
 
+== Irdkosketused ==
+* [http://vepsian.krc.karelia.ru/text/?text_id=132 Kut mijou oludon keittas].
+* [http://vepsian.krc.karelia.ru/text/?text_id=145 Kut oludon keittas].
+* [http://vepsian.krc.karelia.ru/text/?text_id=155 Uk da mamš keitiba olut].
+
 {{Alkogoližed jomad}}
 {{stub}}
 
