(по новому календарю - в июле, но всё равно удивительно рано)

--- a/Rugiž.mw
+++ b/Rugiž.mw
@@ -2,6 +2,9 @@
 [[Fail:Secale cereale.jpg|thumb|right|275px|Rugiž]]
 '''Rugiž''' ([[Latinan kel'|lat.]] ''Secale cereale'') om [[Tähkheinäd|tähkheiniden]] sugukundan, [[Rugiž (heim)|rughen]] heimon [[Üks'voččed kazmused|üks'vozne]] vai [[Kaks'voččed kazmused|kaks'vozne]] [[Heinäsižed kazmused|heinäsine]] kazmuz.
 
+== Irdkosketused ==
+* [http://vepsian.krc.karelia.ru/text/?text_id=58 Jünäs načimei rahnda].
+
 {{stub}}
 
 [[Kategorii:Tähkheinäd]]
