*Empty MediaWiki Message*

--- a/Kalitkad.mw
+++ b/Kalitkad.mw
@@ -1,6 +1,9 @@
 [[Fail:Karjalanpiirakka-20060227.jpg|thumb|250px|Kalitkad]]
 '''Kalitkad''' oma [[Vepsläižed|vepsän]] da [[Karjalaižed|karjalan]] rahvahan söm.
 
+== Irdkosketused ==
+* [http://vepsian.krc.karelia.ru/text/?text_id=49 Kut kalitkad pašttas].
+
 {{stub}}
 
 [[Kategorii:Sömižed]]
