--- a/Päč.mw
+++ b/Päč.mw
@@ -21,15 +21,22 @@ Kodiš kävutadud päčid koval poltusel jagase kahteks tipaks: kanaližed päč
 == Istorii ==
 [[Fail:MuseAcrotiriItem160-6648-1.jpg|pisi|hura|200px|Amuine Grekanman likui päč, 17nz' voz'sada edel meiden erad]]
 
-Kaikiš amuižembad päčid oliba löutud Keskmäižes Evropas, niiden igä om läz 29 tuhad vot edel meiden erad. Niikš oliba süvendused räkištamižele da kehundale [[jurt]]iden südäimes miše keitta [[mamont]]ad.<ref>Jennifer Viegas [http://www.msnbc.msn.com/id/31085915/ns/technology_and_science-science/ Mammoths roasted in prehistoric barbecue pit]. MSNBC. (6 March 2009).</ref> 20,000 vodessai edel meiden erad [[Ukrain]]as kävutihe süvendused palabiden hilidenke kattud tuhkal. Sömižed käroudihe lehtesil da panihe päle, sid' kattihe mahudel.<ref>[http://books.google.com/books?id=VmJLd3sSYecC&pg=PA302 Peter James, Nick Thorpe, I.J. Thorpe. Ancient inventions. Random House Digital, Inc., 1995. P. 302] [[ISBN 978-0-345-40102-1]]</ref> Löutud [[Mežirič]]an lageriš kai-kuččes tehtud mamontanluišpäi pertiš om lezi, kudambad kävutihe lämbitusen da sömän keitmižen täht.<ref>[http://www.donsmaps.com/mammothcamp.html Mezhirich. Donsmaps.com.]</ref>
+Kaikiš amuižembad päčid oliba löutud Keskmäižes Evropas, niiden igä om läz 29 tuhad vot edel meiden erad. Niikš oliba süvendused räkištamižele da kehundale [[jurt]]iden südäimes miše keitta [[mamont]]ad.<ref>Jennifer Viegas [http://www.msnbc.msn.com/id/31085915/ns/technology_and_science-science/ Mammoths roasted in prehistoric barbecue pit]. MSNBC. (6 March 2009).</ref> 20,000 vodessai edel meiden erad [[Ukrain]]as kävutihe süvendused palabiden hilidenke kattud tuhkal. Sömižed käroudihe lehtesil da panihe päle, sid' kattihe mahudel.<ref>[http://books.google.com/books?id=VmJLd3sSYecC&pg=PA302 Peter James, Nick Thorpe, I.J. Thorpe. Ancient inventions. Random House Digital, Inc., 1995. P. 302.] [[ISBN 978-0-345-40102-1]]</ref> Löutud [[Mežirič]]an lageriš kai-kuččes tehtud mamontanluišpäi pertiš om lezi, kudambad kävutihe lämbitusen da sömän keitmižen täht.<ref>[http://www.donsmaps.com/mammothcamp.html Mezhirich. Donsmaps.com.]</ref>
 
-Päčid kävutihe Indižes alangištos sigä elänuzil kul'turoil, a mugažo Egiptas edel dinastijoid.<ref name="Indus"/><ref name="Egypt">Hierkonpolis Online. [http://www.hierakonpolis-online.org/site/kilns.html "Pottery Kilns."]</ref> Läz 3200 vot edel meiden erad kaikutte pert' löndsavičuišpäi oli päčinke žiloiš Indišt alangištodme.<ref name="Indus">[http://www.historyworld.net/wrldhis/PlainTextHistories.asp?historyid=ab73 History Of The Indus Civilization]. Historyworld.net.</ref><ref name="Indus"/><ref name=Dales>George Dales. Excavations at Balakot, Pakistan, 1973. — Journal of Field Archaeology (Boston University). — 1974. — Vol.1. — Issue 1–2. — P. 3–22.</ref> Päčid kävutihe sömäd keitmaha da savičud tehmaha.<ref name="Indus"/> Läz 5000–4000 edel meiden erad civilizacijad edel dinastijoid Egiptas kävutihe poltandpäčid da päčid kuivandan täht paštatest tehmas.<ref name="Egypt"/>
+Päčid kävutihe Indižes alangištos sigä elänuzil kul'turoil, a mugažo Egiptas edel dinastijoid.<ref name="Indus"/><ref name="Egypt">Hierkonpolis Online. [http://www.hierakonpolis-online.org/site/kilns.html "Pottery Kilns."]</ref> Läz 3200 vot edel meiden erad kaikutte pert' löndsavičuišpäi oli päčinke žiloiš Indišt alangištodme.<ref name="Indus">[http://www.historyworld.net/wrldhis/PlainTextHistories.asp?historyid=ab73 History Of The Indus Civilization]. Historyworld.net.</ref><ref name="Dales">George Dales. Excavations at Balakot, Pakistan, 1973. — Journal of Field Archaeology (Boston University). — 1974. — Vol.1. — Issue 1–2. — P. 3–22.</ref> Päčid kävutihe sömäd keitmaha da savičud tehmaha.<ref name="Indus"/> Läz 5000–4000 edel meiden erad civilizacijad edel dinastijoid Egiptas kävutihe poltandpäčid da päčid kuivandan täht paštatest tehmas.<ref name="Egypt"/>
 
 Kulinarijan tedoidajad meletaba, miše arni [[grekalaižed]] kändiba leibän paštand čomamahtoks. Päčid, miččihe leib sijadase paštmaha päčiocan polespäi, oliba ratud [[Amuine Grekanma|amuižes Grekanmas]]. Grekalaižed sädiba äi tahthan toižendoid, nižunikoiden formid da leibän serviruindmahtoid erazvuiččel sömäl. Leibänpaštandan maht šingotihe da tehtihe professijaks, leibän torguind-ki, sikš miše leib pašttihe ei kodiš, a opetud radnikoil mömha. Se sömtegimišton sugu om üks' vanhembaižišpäi.
 
-== Tradicionižen päčin palad ==
+== Tradicionine päč ==
+Päč panese palamha torvata (''must päč'') vai torvanke (''vauged päč'').
+
+Päč om [[kodi]]n päkeskuz.
+
+Nevest, prostides kodinke, tuli da kosketi päč, pakiči sil armastust. Konz' nevest oli tulnu ženihan uden pertin südäimehe, hän ezmäižikš tuli päčele da pakiči sil laskendad ičeze elämha.<ref>[http://www.finnougoria.ru/community/folk/3/detail.php?IBLOCK_ID=46&SECTION_ID=341&ELEMENT_ID=2140 Vepsän praznikad da verod.] Finnougoria.ru.</ref>
+
+=== Tradicionižen päčin palad ===
 [[Fail:Furnaces-rus01.JPG|pisi|oiged|Päčez. Päčinsu umbištadud saubal]]
-* ''Hil'mät'' — varaduz hilid heitta.
+* ''Hil'mät kolosnikanke'' — varaduz hilid heitta.
 * ''Polatid'' — sija päčin päl.
 * ''Prüub'' — širmuš päčin taga, kävutadud aitaižeks.
 * ''Päčez,  päčedez'' — sija sauban edes, kus padad venduba.
@@ -67,10 +74,18 @@ Päčid  ed  vargasta.
 
 == Homaičendad ==
 {{Reflist}}
+
+== Kacu mugažo ==
+* [[Katil]]
+
+== Irdkosketused ==
+* [http://vepsian.krc.karelia.ru/text/?text_id=189 Kut päčid' panoobad].
+
 {{stub}}
 
-[[Kategorii:Päčid]]
-[[Kategorii:Keitmine|*]]
-[[Kategorii:Lämoin purtked]]
+[[Kategorii:Päčid|*]]
+[[Kategorii:Vepsän keitand|*]]
+[[Kategorii:Tehnologii|*]]
+[[Kategorii:Lämoin purtked|*]]
 [[Kategorii:Lämbituztehnik|*]]
-[[Kategorii:Materialiden ümbriradajad mašinad]]
+[[Kategorii:Materialiden ümbriradajad mašinad|*]]
