*Empty MediaWiki Message*

--- a/Kazmused.mw
+++ b/Kazmused.mw
@@ -43,4 +43,4 @@ Kazmusid tedoidab [[botanik]].
 {{stub}}
 [[Kategorii:Biologii]]
 [[Kategorii:Botanik|*]]
-[[Kategorii|Kazmused|*]]
+[[Kategorii:Kazmused|*]]
