*Empty MediaWiki Message*

--- a/Samai_Soluna.mw
+++ b/Samai_Soluna.mw
@@ -7,13 +7,15 @@ Vl 2012 hän ezini "[[Evrovizii-2012|Evrovizii]]"-konkursal, kus pajati "[[Shoul
 
 === Al'bomad ===
 * ''[[Sing Out Loud]]'' (2011)
+* ''[[Soluna Samay (al'bom)|Soluna Samay]]'' (2013)
 
 === Singlad ===
-* ''[[I Wish I Was a Seagull]]'' (2003)
-* ''[[Two Seconds Ago]]'' (2011)
+* ''I Wish I Was a Seagull'' (2003)
+* ''Two Seconds Ago'' (2011)
 * ''[[Should've Known Better]]'' (2012)
 * ''[[Come Again (The Quetzal)]]'' (2012)
-* ''[[Humble]]'' (2012)
+* ''Humble'' (2012)
+* ''L.O.V.E (If Women Ruled the World)'' (2013)
 
 == Irdkosketused ==
 * [http://www.solunasamay.com/ Oficialine sait]
