--- a/Heteropoda_shillongensis.mw
+++ b/Heteropoda_shillongensis.mw
@@ -1,4 +1,4 @@
-'''''Heteropoda shillongensis''''' om [[hämähouk]], kudamban avaižiba da ümbrikirjutiba vl. [[1988]] arahnologad Seti da Tikader. Necil babukoil ei ole völ nimid rahvahaližil kelil.
+'''''Heteropoda shillongensis''''' om [[hämähouk]], kudamban avaižiba da ümbrikirjutiba vl. [[1988]] arahnologad Seti da Tikader. Necil hämähoukol ei ole völ nimid rahvahaližil kelil.
 
 [[Indii|Indijan]] endemik.
 {{stub}}
