*Empty MediaWiki Message*

--- a/La_Šaplod.mw
+++ b/La_Šaplod.mw
@@ -15,7 +15,7 @@
 }}
 '''La Šaplod''' ([[francijan kel'|franc.]]: ''La Chapelaude'', [[oksitanan kel'|oks.]]: ''La Chapela Auda'') om [[kommun]] [[Francii|Francijas]], [[Overn']]-regionas.
 
-Pind om läz 29 km². Vjo d'Iznavan eläjiden lugu oli 981 ristitud 2010-žes vodes. Pämez' — Did'jer Bro (2013.—).
+Pind om läz 29 km². La Šaplodan eläjiden lugu oli 981 ristitud 2010-žes vodes. Pämez' — Did'jer Bro (2013.—).
 {{stub}}
 
 [[Kategorii:Francijan lidnad]]
