*Empty MediaWiki Message*

--- a/Kelenmagii.mw
+++ b/Kelenmagii.mw
@@ -1,4 +1,4 @@
-'''Kelenmagii [kel'magii]''' om mel'pideg, miše erased [[sana]]d vai [[kuvand (kelentedo)|kuvandad]] valatoidas [[mail'm]]an i sen ümbriolendan šingoteshe.
+'''Kelenmagii [kel'magii]''' om mel'pideg, miše erased [[sana]]d vai [[kuvand (kelentedo)|kuvandad]] valatoittas [[mail'm]]an i sen ümbriolendan šingoteshe.
 
 Ozutesed: [[puheg]]ed, [[soiverduz|soiverdused]], toivod {{k|в контексте — пожелания}}, [[vala]]d {{k|клятвы}} i m. e.
 {{stub}}
