*Empty MediaWiki Message*

--- a/Sóknardalr.mw
+++ b/Sóknardalr.mw
@@ -18,3 +18,4 @@ Sóknardalr om [[Sogndal]]-lidnan [[Amunorvegijan kel'|amuine]] nimi.
 
 [[Kategorii:Windir]]
 [[Kategorii:Al'bomad kirjamišton mödhe]]
+[[Kategorii:Debütižed al'bomad]]
