*Empty MediaWiki Message*

--- a/Zvözdi_nas_ždut.mw
+++ b/Zvözdi_nas_ždut.mw
@@ -1,4 +1,4 @@
-'''«Звёзды нас ждут»''' (latinizacijas — '''«Zvözdi nas ždut»'''; ''Tahthad odotadas meid'') om [[Miraž]]-gruppan debütine al'bom, pästtud [[1987]]. vodes.
+'''«Звёзды нас ждут»''' (latinizacijas — '''«Zvözdi nas ždut»'''; ''Tahthad odotadas meid'') om [[Miraž|Miraž-gruppan]] debütine al'bom, pästtud [[1987]]. vodes.
 
 Toine pästand läksi [[1994]]. vodes.
 
