--- a/America.mw
+++ b/America.mw
@@ -1,4 +1,4 @@
-'''«America»''' (''[[Amerik]]'') om 10. [[Modern Talking]]:an al'bom, pästtud [[19. keväz'ku]]s, [[2001]]. vodes.
+'''«America»''' (''[[Amerik]]'') om [[Modern Talking]]:an 10. al'bom, pästtud [[19. keväz'ku]]s, [[2001]]. vodes.
 
 == Pajoiden kirjutez ==
 # ''[[Win the Race]]'' (3:35)
