--- a/Comalies.mw
+++ b/Comalies.mw
@@ -1,4 +1,4 @@
-'''«Comalies»''' om 3. [[Lacuna Coil]]:an al'bom, pästtud [[8. reduku]]s, [[2002]]-žes vodes.
+'''«Comalies»''' om [[Lacuna Coil]]:an 3. al'bom, pästtud [[8. reduku]]s, [[2002]]-žes vodes.
 
 Om pästtud 2 diskoil.
 
