--- a/Dark_Adrenaline.mw
+++ b/Dark_Adrenaline.mw
@@ -1,4 +1,4 @@
-'''«Dark Adrenaline»''' (''Muza adrenalin'') om 5. [[Lacuna Coil]]:an al'bom, pästtud [[23. viluku]]s, [[2012]]. vodes.
+'''«Dark Adrenaline»''' (''Muza adrenalin'') om [[Lacuna Coil]]:an 5. al'bom, pästtud [[23. viluku]]s, [[2012]]. vodes.
 
 == Pajoiden kirjutez ==
 # ''[[Trip the Darkness]]'' (3:12)
