--- a/Halflife.mw
+++ b/Halflife.mw
@@ -1,4 +1,4 @@
-'''«Halflife»''' (''Pol'čihodamine'') om 2. [[Lacuna Coil]]:an minial'bom (EP), pästtud [[2005]]-žes vodes.
+'''«Halflife»''' (''Pol'čihodamine'') om [[Lacuna Coil]]:an 2. minial'bom (EP), pästtud [[2005]]-žes vodes.
 
 == Pajoiden kirjutez ==
 # ''Halflife'' (4:58)
