--- a/Karmacode.mw
+++ b/Karmacode.mw
@@ -1,4 +1,4 @@
-'''«Karmacode»''' (''Karmkod'') om 4. [[Lacuna Coil]]:an al'bom, pästtud [[31. keväz'ku]]s, [[2006]]. vodes.
+'''«Karmacode»''' (''Karmkod'') om [[Lacuna Coil]]:an 4. al'bom, pästtud [[31. keväz'ku]]s, [[2006]]. vodes.
 
 == Pajoiden kirjutez ==
 # ''Fragile'' (4:26)
