*Empty MediaWiki Message*

--- a/Shallow_Life.mw
+++ b/Shallow_Life.mw
@@ -1,4 +1,4 @@
-'''«Shallow Life»''' (''Pall'az elo'') om 5. [[Lacuna Coil]]:an al'bom, pästtud [[21. sulaku]]s, [[2009]]. vodes.
+'''«Shallow Life»''' (''Pall'az elo'') om [[Lacuna Coil]]:an 5. al'bom, pästtud [[21. sulaku]]s, [[2009]]. vodes.
 
 Om pästtud 2 diskoil.
 
