*Empty MediaWiki Message*

--- a/Victory.mw
+++ b/Victory.mw
@@ -1,4 +1,4 @@
-'''«Victory»''' (''Vägestuz'') om 11. [[Modern Talking]]:an al'bom, pästtud [[18. keväz'ku]]s, [[2002]]. vodes.
+'''«Victory»''' (''Vägestuz'') om [[Modern Talking]]:an 11. al'bom, pästtud [[18. keväz'ku]]s, [[2002]]. vodes.
 
 == Pajoiden kirjutez ==
 # ''[[Ready for the Victory]]'' (3:31)
