*Empty MediaWiki Message*

--- a/Universe.mw
+++ b/Universe.mw
@@ -1,4 +1,4 @@
-'''«Universe»''' (''Londuzkund'') om 12. da jäl'gmäine [[Modern Talking]]:an al'bom, pästtud [[31. keväz'ku]]s, [[2003]]. vodes.
+'''«Universe»''' (''Londuzkund'') om [[Modern Talking]]:an 12. da jäl'gmäine al'bom, pästtud [[31. keväz'ku]]s, [[2003]]. vodes.
 
 == Pajoiden kirjutez ==
 # ''[[TV Makes the Superstar]]'' (3:44)
