*Empty MediaWiki Message*

--- a/Unleashed_Memories.mw
+++ b/Unleashed_Memories.mw
@@ -1,4 +1,4 @@
-'''«Unleashed Memories»''' (''Pässtud johtutesed'') om 2. [[Lacuna Coil]]:an al'bom, pästtud [[29. viluku]]s, [[2001]]. vodes.
+'''«Unleashed Memories»''' (''Pässtud johtutesed'') om [[Lacuna Coil]]:an 2. al'bom, pästtud [[29. viluku]]s, [[2001]]. vodes.
 
 == Pajoiden kirjutez ==
 # ''Heir of a Dying Day'' (4:59)
