--- a/Il-86.mw
+++ b/Il-86.mw
@@ -1,7 +1,5 @@
 [[Fail:Pulkovo Ilyushin Il-86.jpg|thumb|right|250px|Ilyushin Il-86 [[Pulkovo]]s]]
-'''Il-86''' (''Ил-86'') om «[[Ilyushin]]»:an [[lendim]]. Ezmäine lenduz oli [[1976]]-nden voden tal'vkul. Kaiked om 106 lendint.
-
-[[NATO:n kodnimi]] — '''Camber'''.
+'''Il-86''' (''Ил-86''; NATO:n kodifikacijan mödhe — '''Camber''') om «[[Ilyushin]]»:an [[lendim]]. Ezmäine lenduz oli [[1976]]-nden voden tal'vkul. Kaiked om 106 lendint.
 {{stub}}
 
 [[Kategorii:Lendimed]]
