*Empty MediaWiki Message*

--- a/Il-76.mw
+++ b/Il-76.mw
@@ -1,5 +1,5 @@
 [[Fail:Aeroflot Ilyushin Il-96-300 Lukas-2.jpg|thumbnail|right|250px|Ilyushin Il-76]]
-'''Il-76''' (''Ил-76''; [[NATO:n aviacine kodifikacii|NATO:n kodifikacijan]] mödhe — '''Candid''') om «[[Ilyushin]]»:an [[lendim]]. Ezmäine lenduz oli [[1971]]-nden voden keväz'kul. Kaiked om 906 lendint.
+'''Il-76''' (''Ил-76''; [[NATO:n kodifikacii|NATO:n kodifikacijan]] mödhe — '''Candid''') om «[[Ilyushin]]»:an [[lendim]]. Ezmäine lenduz oli [[1971]]-nden voden keväz'kul. Kaiked om 906 lendint.
 {{stub}}
 
 [[Kategorii:Lendimed]]
