*Empty MediaWiki Message*

--- a/An-26.mw
+++ b/An-26.mw
@@ -1,5 +1,5 @@
 [[Fail:Russian Air Force Antonov An-26 Medvedev-1.jpg|thumb|right|250px|Antonov An-26]]
-'''An-26''' (''Ан-26''; [[NATO:n aviacine kodifikacii|NATO:n kodifikacijan]] mödhe — '''Curl''') om «Antonov»:an soda[[lendim]]. Ezmäine lenduz oli [[1969]]-nden voden semendkul. Kaiked om 1,403 lendint.
+'''An-26''' (''Ан-26''; [[NATO:n kodifikacii|NATO:n kodifikacijan]] mödhe — '''Curl''') om «Antonov»:an soda[[lendim]]. Ezmäine lenduz oli [[1969]]-nden voden semendkul. Kaiked om 1,403 lendint.
 {{stub}}
 
 [[Kategorii:Lendimed]]
