*Empty MediaWiki Message*

--- a/Il-96.mw
+++ b/Il-96.mw
@@ -1,5 +1,5 @@
 [[Fail:Aeroflot Ilyushin Il-96-300 Lukas-2.jpg|thumbnail|right|250px|Ilyushin Il-96]]
-'''Il-96''' (''Ил-96'') om «[[Ilyushin]]»:an [[lendim]]. Ezmäine lenduz oli [[1988]]-nden voden sügüz'kul. Kaiked om 29 lendint.
+'''Il-96''' (''Ил-96'') om «[[Il'jušinan nimen aviakompleks|Il'jušin]]»:an [[lendim]]. Ezmäine lenduz oli [[1988]]-nden voden sügüz'kul. Kaiked om 29 lendint.
 {{stub}}
 
 [[Kategorii:Lendimed]]
