--- a/Heopsan_piramid.mw
+++ b/Heopsan_piramid.mw
@@ -1,5 +1,5 @@
 [[Fail:Gizeh Cheops BW 1.jpg|thumb|right|300px|Heopsan piramid]]
-'''[[Heops]]an (Hufun) piramid''' om kaikiš suremb [[Egiptan piramidad|Egiptan piramidoišpäi]], üks'jäine «[[Seičeme mail'man čudod|Seičemes mail'man čudospäi]]», kudamb jäi tähäsai.
+'''[[Heops]]an (Hufun) piramid''' om kaikiš suremb [[Egiptan piramidad|Egiptan piramidoišpäi]], üks'jäine «[[Mail'man seičeme čudod|Mail'man seičeme čudospäi]]», kudamb jäi tähäsai.
 
 Heopsan piramid mülüb kaikiš surembiden Egiptan piramidoiden kompleksha, kudambad sijadase [[Gizan ülüz|Gizan ülüdes]]. Ned oma Heopsan (Hufun), [[Hefrenan piramid|Hefrenan (Hafran)]] i [[Mikerinan piramid|Mikerinan (Menkauran)]] piramidad. Suren piramidan arhitektoraks lugese [[Hemiun]], Heopsan vizir' i vellenpoig. Hänel oli-ki «Faraonan kaikiden sauvomižiden ohjandai» -titul. Enamb koumed tuhad vot (edel [[Linkol'nan päjumalanpert'|kafedraližen päjumalanpertin Linkol'nas sauvondad]] Anglijas, läz 1300 vot) piramid oli kaikiš korktemban sauvusen Mas.
 
