*Empty MediaWiki Message*

--- a/Mail'man_seičeme_čudod.mw
+++ b/Mail'man_seičeme_čudod.mw
@@ -65,6 +65,11 @@
 | Necen majakan lämoi oli lujas tarbhaine laivajandale.
 |}
 
+== Kacu mugažo ==
+* [[Egiptan piramidad]]
+* [[Uded mail'man seičeme čudod]]
+* [[Mail'man čudod]]
+
 {{stub}}
 
 [[Kategorii:Mail'man seičeme čudod|*]]
