fixing dead links

--- a/Heitämine_(serial).mw
+++ b/Heitämine_(serial).mw
@@ -61,7 +61,7 @@ Om mel'hetartus, miše romanan sädajal oma Odessan jured: [[Bondarenko Väčesl
 
 == Irdkosketused ==
 * [http://russiancinema.ru/films/film19918/ Kodimaižen kinon enciklopedii. «Heitämine»] {{ref-ru}}
-* ''Prohanov Aleksandr.'' [http://zavtra.ru/cgi//veil//data/zavtra/07/736/11.html Voikuva imperijan ramas] {{ref-ru}}
+* ''Prohanov Aleksandr.'' [http://web.archive.org/web/20111020212022/zavtra.ru/cgi//veil//data/zavtra/07/736/11.html Voikuva imperijan ramas] {{ref-ru}}
 * Kahtenpagin fil'man tegijoidenke ''Izvestija''-lehteses: [http://www.izvestia.ru/culture/article3111724/?print «Gocman koli südäimen kibukuron tagut, a Nora Miškanke ajoiba Moskvaha»] {{ref-ru}}
 * ''Al'perina Susanna.'' [http://www.rg.ru/2007/12/13/likvidacia.html «Vastuzsija...»:n voib vajehtada. Sidä ozuti «Heitämine»-serial] {{ref-ru}}
 * ''Sokolov Boris.'' [http://grani.ru/Culture/Cinema/m.130967.html Istorijan heitämine] {{ref-ru}}
